--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Студія</title>
+    <title>WEBSTUDIO</title>
   </head>
   <body>
     <!-- ------------------------------------------------------------------------- -->
     <header>
-      <a href="#">WEB</a>
-      <a href="#">STUDIO</a>
+      <a href="#">WEB<span>STUDIO</span></a>
       <nav>
         <ul>
           <li>
@@ -31,13 +30,56 @@
     </header>
     <!-- ------------------------------------------------------------------------- -->
     <main>
+      <!-- section-hero -->
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
+      <!--section-goal-->
+      <section>
+        <h2 hidden>goal</h2>
+        <div>
+          <ul>
+            <li>
+              <p>Strategy</p>
+              <p>Our goal is to identify the business
+                problem to walk away with the perfect and creative solution. </p>
+            </li>
+            <li>
+              <p>Punctuality</p>
+              <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
+            <li>
+              <p>Diligence</p>
+              <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li>
+              <p>Technologies</p>
+              <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--section services-->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img src="./images/monitor.jpg" alt="monitor with graphs" width="360" height="300">
+          </li>
+          <li>
+            <img src="./images/smartphone.jpg" alt="social network and its functionality" width="360" height="300">
+          </li>
+          <li>
+            <img src="./images/laptop.jpg" alt="laptop with smartphone" width="360" height="300">
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- ------------------------------------------------------------------------- -->
-    <footer></footer>
+    <footer>
+
+    </footer>
     <!-- ------------------------------------------------------------------------- -->
   </body>
 </html>
