--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEBSTUDIO</title>
+    <title>Webstodio</title>
   </head>
   <body>
-    <!-- ------------------------------------------------------------------------- -->
     <header>
       <a href="#">WEB<span>STUDIO</span></a>
       <nav>
@@ -28,7 +27,6 @@
         <li><a href="tel:110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
-    <!-- ------------------------------------------------------------------------- -->
     <main>
       <!-- section-hero -->
       <section>
@@ -36,50 +34,74 @@
         <button type="button">Order Service</button>
       </section>
       <!--section-goal-->
-      <section>
-        <h2 hidden>goal</h2>
-        <div>
+      <section>   
+          <h2 hidden>goal</h2>
           <ul>
             <li>
-              <p>Strategy</p>
-              <p>Our goal is to identify the business
-                problem to walk away with the perfect and creative solution. </p>
+              <h3>Strategy</h3>
+              <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
             </li>
             <li>
-              <p>Punctuality</p>
+              <h3>Punctuality</h3>
               <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li>
-              <p>Diligence</p>
+              <h3>Diligence</h3>
               <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
-              <p>Technologies</p>
+              <h3>Technologies</h3>
               <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
-          </ul>
-        </div>
+          </ul> 
       </section>
       <!--section services-->
+      <section>       
+        
+          <h2>What are we doing</h2>
+          <ul>
+            <li>
+              <img src="./images/devices/monitor.jpg" alt="monitor with graphs" width="360" height="300">
+            </li>
+            <li>
+              <img src="./images/devices/smartphone.jpg" alt="social network and its functionality" width="360" height="300">
+            </li>
+            <li>
+              <img src="./images/devices/laptop.jpg" alt="laptop with smartphone" width="360" height="300">
+            </li>
+          </ul>
+         
+      </section>
+      <!--section team-->
       <section>
-        <h2>What are we doing</h2>
+        <h2> Our Team </h2>
         <ul>
           <li>
-            <img src="./images/monitor.jpg" alt="monitor with graphs" width="360" height="300">
+            <img src="./images/team/mark-guerrero.jpg" alt="A smiling, pleasant-looking man with a thick beard and a blue shirt" width="264" height="260">
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/smartphone.jpg" alt="social network and its functionality" width="360" height="300">
+            <img src="./images/team/tom-ford.jpg" alt="A smiling man with a neat beard and a blue shirt" width="264" height="260">
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/laptop.jpg" alt="laptop with smartphone" width="360" height="300">
+            <img src="./images/team/camila-garcia.jpg" alt="Smiling beautiful young woman with long loose hair and knitted pink sweater" width="264" height="260">
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/team/daniel-wilson.jpg" alt="A smiling young man with a neat beard in a gray t-shirt" width="264" height="260">
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <!-- ------------------------------------------------------------------------- -->
     <footer>
-
+      <a href="#">WEB<span>STUDIO</span></a>
+      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.  </p>
     </footer>
-    <!-- ------------------------------------------------------------------------- -->
   </body>
 </html>
