--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </ul>
     </header>
     <main>
-      <!-- section-hero -->
+      <!--section-hero-->
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
@@ -55,9 +55,8 @@
             </li>
           </ul> 
       </section>
-      <!--section services-->
-      <section>       
-        
+      <!--section-services-->
+      <section>
           <h2>What are we doing</h2>
           <ul>
             <li>
@@ -70,9 +69,8 @@
               <img src="./images/devices/laptop.jpg" alt="laptop with smartphone" width="360" height="300">
             </li>
           </ul>
-         
       </section>
-      <!--section team-->
+      <!--section-team-->
       <section>
         <h2> Our Team </h2>
         <ul>
