--- a/index.html
+++ b/index.html
@@ -76,22 +76,22 @@
         <ul>
           <li>
             <img src="./images/team/mark-guerrero.jpg" alt="A smiling, pleasant-looking man with a thick beard and a blue shirt" width="264" height="260">
-            <h3>Mark Guerrero</h3>
+            <p>Mark Guerrero</p>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/team/tom-ford.jpg" alt="A smiling man with a neat beard and a blue shirt" width="264" height="260">
-            <h3>Tom Ford</h3>
+            <p>Tom Ford</p>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team/camila-garcia.jpg" alt="Smiling beautiful young woman with long loose hair and knitted pink sweater" width="264" height="260">
-            <h3>Camila Garcia</h3>
+            <p>Camila Garcia</p>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/team/daniel-wilson.jpg" alt="A smiling young man with a neat beard in a gray t-shirt" width="264" height="260">
-            <h3>Daniel Wilson</h3>
+            <p>Daniel Wilson</p>
             <p>UI Designer</p>
           </li>
         </ul>
