--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="#">WEB<span>STUDIO</span></a>
+      <a href="#"><span>WEB</span></a>STUDIO</a>
       <nav>
         <ul>
           <li>
@@ -104,7 +104,7 @@
       </section>
     </main>
     <footer>
-      <a href="#">WEB<span>STUDIO</span></a>
+      <a href="#"><span>WEB</span>STUDIO</a>
       <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.  </p>
     </footer>
   </body>
