--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="#"><span>WEB</span></a>STUDIO</a>
+      <a href="#"><span>WEB</span>STUDIO</a>
       <nav>
         <ul>
           <li>
